# BankSimulation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: main.yml
include/: Bank.h  BankAccount.h  DataBaseManager.h  TransactionTypes.h  Transactions.h  UIHandler.h
src/: Bank.cpp  Bank.h  BankAccount.cpp  BankAccount.h  DataBaseManager.cpp  Transactions.cpp  UIHandler.cpp  main.cpp
tests/: test_Bank.cpp  test_BankAccount.cpp  test_Transactions.cpp
